# freedeck-configurator

./: .editorconfig  .env  .env.development.local  .gitignore  .unimportedrc.json  README.md  codegen.yml  craco.config.js  package-lock.json  package.json  syncVersions.js  tailwind.config.js  tsconfig.common.json  tsconfig.json
.github/workflows/: develop.yml  main.yml  master.yml  master.yml_disabled
app/: package-lock.json  package.json  tsconfig.json
app/src/: App.ts  preload.js  preload.ts
docs/: asset-manifest.json  index.html  precache-manifest.38d2516ae88f07258bde9a934925830d.js  precache-manifest.8144384cd016b69994bae4ef620590f9.js  service-worker.js
public/: index.html  manifest.json
public/fonts/: large.fnt  medium.fnt  small.fnt  smaller.fnt
src/: App.tsx  Body.tsx  ModalBody.tsx  constants.ts  floyd-steinberg.d.ts  index.tsx  interfaces.ts  serviceWorker.ts  serviceWorkerRegistration.ts  state.ts  tailwind.css
src-tauri/: Cargo.toml  benches.rs  tauri.conf.json  tauri.macos.conf.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  linux_active_window.sh  macos_active_window.as  main.rs
src-tauri/src/lib/: event_handlers.rs  fd_serial.rs  mod.rs  os.rs  serial.rs  state.rs  system.rs  threads.rs
src-tauri/src/lib/system/: mod.rs  nix.rs  win.rs
src-tauri/src/modules/: commands.rs  event_handlers.rs  mod.rs  plugins.rs  state.rs  threads.rs  window.rs
src-tauri/src/plugins/: mod.rs  single_instance.rs
src/components/: About.tsx  Action.tsx  Brightness.tsx  ButtonSettings.tsx  ConfigGrid.tsx  DefaultBackButtonSettings.tsx  Device.tsx  Display.tsx  DisplayButton.tsx  GeneralSettings.tsx  GlobalSettings.tsx  Header.tsx  Image.tsx  ImagePreview.tsx  Login.tsx  Options.tsx  Page.tsx  Serial.tsx  Settings.tsx  SettingsModal.tsx  button.tsx  contextMenu.tsx  dropDisplay.tsx  icons.tsx  misc.tsx  modal.tsx
src/containers/: About.tsx  Action.tsx  BackButtonLiveData.tsx  Brightness.tsx  ContentBody.tsx  DefaultBackButtonSettings.tsx  DeprecatedInfoModal.tsx  DeveloperSettings.tsx  Device.tsx  Display.tsx  DisplayButton.tsx  Displays.tsx  FirstTime.tsx  GeneralSettings.tsx  GeneralSettingsModal.tsx  Header.tsx  HelpModal.tsx  Login.tsx  LoginButton.tsx  Main.tsx  Page.tsx  Pages.tsx  Serial.tsx  Settings.tsx  SettingsModal.tsx  _Boilerplate.tsx
src/definitions/: colors.ts  defaultBackImage.ts  defaultPage.ts  defaultRowBuffer.ts  emptyConvertedImage.ts  fdsettings.ts  headers.ts  keys.ts  modes.ts
src/graphql/: queries.gql
src/hooks.ts/: states.ts  (+2 more)
web/: .env  .eslintcache  .gitignore  .unimportedrc.json  README.md  codegen.yml  package-lock.json  package.json  tailwind.config.js
(+284 files in other folders)
